--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content=" Qbitrix DataLens: A modern client-side data explorer for CSV, JSON, Excel, and TXT files. Explore and filter your data easily.">
+  <meta name="keywords" content="Qbitrix , Qbitrix DataLens, data explorer, Client Side Data Explorer, data visualization">
+  <meta name="author" content="Sachin Kumar">
   <title>DataLens — Client-side Data Explorer</title>
 
   <!-- Favicon -->
@@ -265,6 +268,21 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
   <script src="index.js"></script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "DataLens",
+      "url": "https://qbitrixdatalens.vercel.app/",
+      "description": "Qbitrix DataLens: Client-side data explorer for CSV, JSON, Excel, and TXT files",
+      "applicationCategory": "Data visualization",
+      "author": {
+        "@type": "Person",
+        "name": "Sachin Kumar"
+      }
+    }
+  </script>
+
   <!-- Footer -->
   <footer class="bg-light text-center text-muted py-3 mt-4 border-top">
     <div class="container">
