--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="assets/DataLensIco.ico" />
   <link rel="shortcut icon" href="assets/DataLensIco.ico" type="image/x-icon" />
-
+  <link rel="stylesheet" href="styles.css" />
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css"
@@ -290,7 +290,7 @@
 
       <!-- Data Table / Card View -->
       <div class="table-wrapper border rounded-2 p-0 mb-3">
-        <div class="table-responsive p-2">
+        <div class="table-responsive m-2">
           <table id="dataTable" class="table table-hover table-striped align-middle mb-0">
             <thead id="tableHead"></thead>
             <tbody id="tableBody"></tbody>
@@ -333,10 +333,6 @@
     <div id="notif" class="position-fixed bottom-0 end-0 p-3" style="z-index:1050"></div>
 
   </div> <!-- /Container -->
-
-  <!-- Bootstrap JS + Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="index.js"></script>
 
   <!-- Footer -->
   <footer class="bg-light text-center text-muted py-3 mt-4 border-top">
@@ -433,6 +429,10 @@
     </div>
   </div>
 
+
+  <!-- Bootstrap JS + Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="module" src="./index.js"></script>
 
 </body>
 
